# ThinIce

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  configure.ac  libtool
data/: Makefile.am
data/desktop/: thinice.desktop
etc/: Info.plist.in  Makefile.am  thinice.icns
po/: LINGUAS  Makevars  POTFILES.in  de.po  en.po  es.po  fr.po  pt.po  thin-ice.pot
src/: Makefile.am  cp-button.c  draw-text.c  draw-text.h  mapa1.h  mapa10.h  mapa11.h  mapa12.h  mapa13.h  mapa14.h  mapa15.h  mapa16.h  mapa17.h  mapa18.h  mapa19.h  mapa2.h  mapa3.h  mapa4.h  mapa5.h  mapa6.h  mapa7.h  mapa8.h  mapa9.h  thinice.c  thinice.rc
