gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/tiles.png \
	images/arcade.png \
	images/puffle-on-ice.png \
	images/puffle-explain.png \
	images/moneybag.png \
	images/explain1.png \
	images/explain2.png \
	images/boton-ui-1-down.png \
	images/boton-ui-1-over.png \
	images/boton-ui-1-up.png \
	images/boton-ui-2-down.png \
	images/boton-ui-2-over.png \
	images/boton-ui-2-up.png \
	images/boton-close-down.png \
	images/boton-close-over.png \
	images/boton-close-up.png \
	images/down-1.png \
	images/down-2.png \
	images/down-3.png \
	images/left-1.png \
	images/left-2.png \
	images/left-3.png \
	images/right-1.png \
	images/right-2.png \
	images/right-3.png \
	images/up-1.png \
	images/up-2.png \
	images/up-3.png \
	burbanksb.ttf \
	burbankbgbk.ttf \
	sounds/complete.wav \
	sounds/double.wav \
	sounds/drown.wav \
	sounds/ice.wav \
	sounds/key.wav \
	sounds/money.wav \
	sounds/move.wav \
	sounds/points.wav \
	sounds/start.wav \
	sounds/warp.wav \
	sounds/button-1.wav \
	music/thinice1.ogg \
	music/thinice2.ogg

